criação de tela de cadastro, login entre outros

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <nav id="Menu-navegacao">
     <section>
-      <img src="./assets/logo.svg" alt="logo da empresa">
+      <a href="./index.html"><img src="./assets/logo.svg" alt="logo da empresa"></a>
     </section>
     <section class="btn-nav-a">
       <a href="#" class="btn-nav"><img src="./assets/btn-pesquisa.svg" alt=""></a>
@@ -39,55 +39,55 @@
         <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</ class="comprar">
+        <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto2.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto3.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto4.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto5.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto6.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto7.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto8.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
+        <img src="./assets/Produto9.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar">Comprar</button>
+        <button class="comprar"><a href="#">Comprar</a></button>
       </div>
     </section>
   </main>
@@ -115,8 +115,8 @@
   </div>
   <section class="redeS-card">
     <div class="redesSociais">
-      <a href="#"><img src="./assets/linkedin.svg" alt=""></a>
-      <a href="#"><img src="./assets/github.svg" alt=""></a>
+      <a href="https://www.linkedin.com/in/fernandorgoncalves/" target="_blank"><img src="./assets/linkedin.svg" alt=""></a>
+      <a href="https://github.com/fernandorgoncalves" target="_blank"><img src="./assets/github.svg" alt=""></a>
     </div>
     <div class="cards">
       <img src="./assets/cardMaster.svg" alt="">
