adicionando uma foto de exibição

--- a/index.html
+++ b/index.html
@@ -42,49 +42,49 @@
         <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto2.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto3.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto4.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto5.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto6.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto7.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto8.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
-        <img src="../assets/Produto9.svg" alt="">
+        <img src="./assets/Produto1.svg" alt="">
         <span>Lorem ipsum dolor sit</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
