--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <img src="./assets/cardVisa.svg" alt="">
     </div>
   </section>
+  <script src="./script.js"></script>
 </body>
 
 </html>
