--- a/login.html
+++ b/login.html
@@ -26,19 +26,20 @@
       <span id="span-login" class="mens-login-span">Login do cliente</span>
       <div class="div-login">
         <label for="">Email</label>
-        <input type="email" placeholder="Digite o seu Email" required pattern="Informe o email">
+        <input type="email" placeholder="Digite o seu Email" required pattern="Informe o email" id="email">
       </div>
       <div class="div-senha">
         <label for="">Senha</label>
-        <input type="password" name="" id="" placeholder="Digite a senha" required pattern="Digite a senha">
+        <input type="text" name="" id="senha" placeholder="Digite a senha" required pattern="Digite a senha">
       </div>
-      <button><a href="#">Continuar</a></button>
+      <button><a href="#" onclick="carregar()">Continuar</a></button>
       <div class="esq-cad">
         <a href="#">Esqueceu a senha</a>
         <a href="./cadastro.html">Cadastre-se</a>
       </div>
     </section>
   </main>
+  <script src="./script.js"></script>
 </body>
 
 </html>
