Alteração na mensagem de alerta para INNERHTMl

--- a/login.html
+++ b/login.html
@@ -30,13 +30,17 @@
       </div>
       <div class="div-senha">
         <label for="">Senha</label>
-        <input type="text" name="" id="senha" placeholder="Digite a senha" required pattern="Digite a senha">
+        <input type="password" name="" id="senha" placeholder="Digite a senha" required pattern="Digite a senha">
       </div>
+      <div class="divButtonResult">
       <button><a href="#" onclick="carregar()">Continuar</a></button>
+      <span id="resultadoLogin"></span>
+      </div>
       <div class="esq-cad">
         <a href="#">Esqueceu a senha</a>
         <a href="./cadastro.html">Cadastre-se</a>
       </div>
+
     </section>
   </main>
   <script src="./script.js"></script>
