--- a/index.html
+++ b/index.html
@@ -37,55 +37,55 @@
     <section class="section-produto">
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 1</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 2</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 3</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 4</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 5</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 6</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 7</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 8</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
       <div class="produtos">
         <img src="./assets/Produto1.svg" alt="">
-        <span>Lorem ipsum dolor sit</span>
+        <span>Produto 9</span>
         <p>R$ <span class="money">50,00</span></p>
         <button class="comprar"><a href="#">Comprar</a></button>
       </div>
