alteração no nav da tela inicial

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav id="Menu-navegacao">
+  <nav id="Menu-navegacao-cadastro">
     <section>
       <a href="./index.html"><img src="./assets/logo.svg" alt="logo da empresa"></a>
 
