--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav id="Menu-navegacao">
+  <nav id="Menu-navegacao-login">
     <section>
       <a href="./index.html"><img src="./assets/logo.svg" alt="logo da empresa"></a>
 
@@ -33,8 +33,8 @@
         <input type="password" name="" id="senha" placeholder="Digite a senha" required pattern="Digite a senha">
       </div>
       <div class="divButtonResult">
-      <button><a href="#" onclick="carregar()">Continuar</a></button>
-      <span id="resultadoLogin"></span>
+        <button><a href="#" onclick="carregar()">Continuar</a></button>
+        <span id="resultadoLogin"></span>
       </div>
       <div class="esq-cad">
         <a href="#">Esqueceu a senha</a>
