--- a/index.html
+++ b/index.html
@@ -1,130 +1,148 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Lato:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Selfcare</title>
+  </head>
 
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Lato:wght@700&display=swap" rel="stylesheet">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>Selfcare</title>
-</head>
-
-<body>
-  <nav id="Menu-navegacao">
-    <section>
-      <a href="./index.html"><img src="./assets/logo.svg" alt="logo da empresa"></a>
-    </section>
-    <section class="btn-nav-a">
-      <a href="#" class="btn-nav"><img src="./assets/btn-pesquisa.svg" alt=""></a>
-      <a href="./login.html" class="btn-nav"><img src="./assets/btn-login.svg" alt=""></a>
-      <a href="#" class="btn-nav"><img src="./assets/btn-comprar.svg" alt=""></a>
-    </section>
-  </nav>
-  <main>
-    <section class="img-expose">
-      <img src="./assets/expose.svg" alt="">
-    </section>
-    <section class="div-promo-produto">
-      <span>promoção</span>
-      <span>9 produtos</span>
-    </section>
+  <body>
+    <nav id="Menu-navegacao">
+      <section>
+        <a href="./index.html"
+          ><img src="./assets/logo.svg" alt="logo da empresa"
+        /></a>
+      </section>
+      <section class="btn-nav-a">
+        <a href="#" class="btn-nav"
+          ><img src="./assets/btn-pesquisa.svg" alt=""
+        /></a>
+        <a href="./login.html" class="btn-nav"
+          ><img src="./assets/btn-login.svg" alt=""
+        /></a>
+        <a href="#" class="btn-nav"
+          ><img src="./assets/btn-comprar.svg" alt=""
+        /></a>
+      </section>
+    </nav>
+    <main>
+      <section class="img-expose">
+        <img src="./assets/expose.svg" alt="" />
+      </section>
+      <section class="div-promo-produto">
+        <span>promoção</span>
+        <span>9 produtoss</span>
+      </section>
+      <div class="line">
+        <img src="./assets/line.svg" alt="" />
+      </div>
+      <section class="section-produto">
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 1</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar" autocomplete="off">
+            <a href="#">Comprar</a>
+          </button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 2</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar" autocomplete="off">
+            <a href="#">Comprar</a>
+          </button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 3</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar"><a href="#">Comprar</a></button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 4</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar"><a href="#">Comprar</a></button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 5</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar"><a href="#">Comprar</a></button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 6</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar"><a href="#">Comprar</a></button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 7</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar"><a href="#">Comprar</a></button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 8</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar"><a href="#">Comprar</a></button>
+        </div>
+        <div class="produtos">
+          <img src="./assets/Produto1.svg" alt="" />
+          <span>Produto 9</span>
+          <p>R$ <span class="money">50,00</span></p>
+          <button class="comprar"><a href="#">Comprar</a></button>
+        </div>
+      </section>
+    </main>
     <div class="line">
-      <img src="./assets/line.svg" alt="">
+      <img src="./assets/line.svg" alt="" />
     </div>
-    <section class="section-produto">
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 1</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
+    <footer>
+      <div class="contatos-servicos">
+        <a href="#">Contato</a>
+        <a href="#">Termos e serviços</a>
+        <a href="#">Política e privacidade</a>
+        <a href="#">Cancelameto, troca e reembolso</a>
       </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 2</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar" autocomplete="off"><a href="#">Comprar</a></button>
+      <div class="div-footer-news-email">
+        <span class="newsletter">Newsletter</span>
+        <div class="footer-email">
+          <input type="text" placeholder="Digite seu e-mail" />
+          <button>Inscrever</button>
+        </div>
       </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 3</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar"><a href="#">Comprar</a></button>
+    </footer>
+    <div class="line">
+      <img src="./assets/line.svg" alt="" />
+    </div>
+    <section class="redeS-card">
+      <div class="redesSociais">
+        <a
+          href="https://www.linkedin.com/in/fernandorgoncalves/"
+          target="_blank"
+          ><img src="./assets/linkedin.svg" alt=""
+        /></a>
+        <a href="https://github.com/fernandorgoncalves" target="_blank"
+          ><img src="./assets/github.svg" alt=""
+        /></a>
       </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 4</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar"><a href="#">Comprar</a></button>
-      </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 5</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar"><a href="#">Comprar</a></button>
-      </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 6</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar"><a href="#">Comprar</a></button>
-      </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 7</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar"><a href="#">Comprar</a></button>
-      </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 8</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar"><a href="#">Comprar</a></button>
-      </div>
-      <div class="produtos">
-        <img src="./assets/Produto1.svg" alt="">
-        <span>Produto 9</span>
-        <p>R$ <span class="money">50,00</span></p>
-        <button class="comprar"><a href="#">Comprar</a></button>
+      <div class="cards">
+        <img src="./assets/cardMaster.svg" alt="" />
+        <img src="./assets/cardPay.svg" alt="" />
+        <img src="./assets/cardVisa.svg" alt="" />
       </div>
     </section>
-  </main>
-  <div class="line">
-    <img src="./assets/line.svg" alt="">
-  </div>
-  <footer>
-    <div class="contatos-servicos">
-      <a href="#">Contato</a>
-      <a href="#">Termos e serviços</a>
-      <a href="#">Política e privacidade</a>
-      <a href="#">Cancelameto, troca e reembolso</a>
-    </div>
-    <div class="div-footer-news-email">
-      <span class="newsletter">Newsletter</span>
-      <div class="footer-email">
-        <input type="text" placeholder="Digite seu e-mail">
-        <button>Inscrever</button>
-      </div>
-    </div>
-
-  </footer>
-  <div class="line">
-    <img src="./assets/line.svg" alt="">
-  </div>
-  <section class="redeS-card">
-    <div class="redesSociais">
-      <a href="https://www.linkedin.com/in/fernandorgoncalves/" target="_blank"><img src="./assets/linkedin.svg" alt=""></a>
-      <a href="https://github.com/fernandorgoncalves" target="_blank"><img src="./assets/github.svg" alt=""></a>
-    </div>
-    <div class="cards">
-      <img src="./assets/cardMaster.svg" alt="">
-      <img src="./assets/cardPay.svg" alt="">
-      <img src="./assets/cardVisa.svg" alt="">
-    </div>
-  </section>
-  <script src="./script.js"></script>
-</body>
-
+    <script src="./script.js"></script>
+  </body>
 </html>
