--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
       <section class="div-promo-produto">
         <span>promoção</span>
-        <span>9 produtoss</span>
+        <span>9 produtos</span>
       </section>
       <div class="line">
         <img src="./assets/line.svg" alt="" />
